Add basic style classes to open button

--- a/submissions/webdevagent/friend-app-task/index.html
+++ b/submissions/webdevagent/friend-app-task/index.html
@@ -18,7 +18,7 @@
     </ul>
 
   </div>
-  <p class="open">Open</p>
+  <p class="open remove-card forOpen">Open</p>
   <div class="navigation">
     <p class="hide">Hide</p>
     <ul>
