Fixed logo and decreased size of cards

--- a/submissions/patrofimov/friends-app/index.html
+++ b/submissions/patrofimov/friends-app/index.html
@@ -26,8 +26,8 @@
             </select>
             <select id="sort-age" size="3">
                <option disabled selected class = "sort-age-field">by age</option>
-               <option value="ageUp">asc</option>
-               <option value="ageDown">desc</option>
+               <option value="ageUp">1-9</option>
+               <option value="ageDown">9-1</option>
             </select>
             <button class="reset">Reset</button>
          </form>
