Edit for requested changes

--- a/submissions/denislukianenko/html-css-popup/index.html
+++ b/submissions/denislukianenko/html-css-popup/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header aria-label="Header">
+    <header class="header" aria-label="Header">
       <div class="right-group">
         <a class="header-link" href="https://gmail.com">Gmail</a>
         <a class="header-link" href="https://images.google.com">Images</a>
@@ -131,7 +131,10 @@
           class="header-notifications-toggle"
           aria-label="Notifications Settings Switch"
         ></button>
-        <button class="header-avatar" ria-label="User Settings Switch"></button>
+        <button
+          class="header-avatar"
+          aria-label="User Settings Switch"
+        ></button>
       </div>
     </header>
   </body>
