--- a/submissions/Vitaminvp/html-css-popup/src/src/index.html
+++ b/submissions/Vitaminvp/html-css-popup/src/src/index.html
@@ -10,9 +10,9 @@
 <header>
     <nav class="">
         <ul class="nav">
-            <li><a class="nav__link" href="#">Gmail</a></li>
-            <li><a class="nav__link" href="#">Images</a></li>
-            <li>
+            <li class="nav__list"><a class="nav__link" href="#">Gmail</a></li>
+            <li class="nav__list"><a class="nav__link" href="#">Images</a></li>
+            <li class="nav__list">
                 <input type="checkbox" class="nav__input" id="nav__input">
                 <label for="nav__input" tabindex="0">
                     <span class="nav__input_close"></span>
@@ -62,7 +62,7 @@
                         </li>
                     </ul>
                     <input type="checkbox" class="nav__menu_input" id="nav__menu_input">
-                    <label for="nav__menu_input" role="button"><span>Більше</span></label>
+                    <label for="nav__menu_input" role="button" tabindex="0"><span>Більше</span></label>
                     <ul class="nav__menu_listsMore">
                         <li class="nav__input_listMore"><a class="nav__input_linkMore" href="#"><span
                                 class="nav__menu_icon nav__menu_icon-doc"></span> <span class="nav__menu_title">Документи</span></a>
@@ -92,14 +92,14 @@
                     <a class="nav__menu_linkMore" href="#">Even more from Google</a>
                 </div>
             </li>
-            <li>
+            <li class="nav__list">
                 <a href="#">
                     <svg class="nav__bell" focusable="true" viewBox="0 0 24 24">
                         <path d="M12,2C6.5,2,2,6.5,2,12c0,5.5,4.5,10,10,10s10-4.5,10-10C22,6.5,17.5,2,12,2z M12,18c-0.6,0-1-0.5-1-1h2 C13,17.5,12.5,18,12,18z M17,16H7v-0.6l1.2-1.2v-3c0-1.9,1-3.4,2.8-3.8V6.9C11.1,6.4,11.5,6,12,6s0.9,0.4,0.9,0.9v0.4 c1.8,0.4,2.8,2,2.8,3.8v3l1.2,1.2V16z"></path>
                     </svg>
                 </a>
             </li>
-            <li><a href="#" class="nav__auth"></a></li>
+            <li class="nav__list"><a href="#" class="nav__auth"></a></li>
         </ul>
     </nav>
 </header>
