replace display none

--- a/submissions/Vitaminvp/html-css-popup/src/src/index.html
+++ b/submissions/Vitaminvp/html-css-popup/src/src/index.html
@@ -14,7 +14,7 @@
             <li class="nav__list"><a class="nav__link" href="#">Images</a></li>
             <li class="nav__list">
                 <input type="checkbox" class="nav__input" id="nav__input">
-                <label for="nav__input" tabindex="0">
+                <label for="nav__input">
                     <span class="nav__input_close"></span>
                     <span class="nav__input_icons" >
                         <span class="nav__input_icon">&#9632;</span>
@@ -62,7 +62,7 @@
                         </li>
                     </ul>
                     <input type="checkbox" class="nav__menu_input" id="nav__menu_input">
-                    <label for="nav__menu_input" role="button" tabindex="0"><span>Більше</span></label>
+                    <label for="nav__menu_input" role="button"><span>Більше</span></label>
                     <ul class="nav__menu_listsMore">
                         <li class="nav__input_listMore"><a class="nav__input_linkMore" href="#"><span
                                 class="nav__menu_icon nav__menu_icon-doc"></span> <span class="nav__menu_title">Документи</span></a>
