--- a/submissions/justdevway/Google-style Popup/index.html
+++ b/submissions/justdevway/Google-style Popup/index.html
@@ -19,8 +19,8 @@
                 <path d="M0 102h102V0H0v102zm153 306h102V306H153v102zM0 408h102V306H0v102zm0-153h102V153H0v102zm153 0h102V153H153v102zM306 0v102h102V0H306zM153 102h102V0H153v102zm153 153h102V153H306v102zm0 153h102V306H306v102z"/>
             </svg>
         </label>
-        <div class="header__link header__link--menu apps">
-            <div class="apps__body">
+        <div class="header__link header__link--menu">
+            <div class="apps">
                 <input type="checkbox" class="apps__show-more" id="apps__show-more" type="checkbox">
                 <label for="apps__show-more" class="apps__label apps__label--more">More</label>
                 <label for="apps__show-more" class="apps__label apps__label--less">Less</label>
