Remove unused class on list

--- a/submissions/justdevway/Google-style Popup/index.html
+++ b/submissions/justdevway/Google-style Popup/index.html
@@ -24,7 +24,7 @@
                 <input type="checkbox" class="apps__show-more" id="apps__show-more" type="checkbox">
                 <label for="apps__show-more" class="apps__label apps__label--more">More</label>
                 <label for="apps__show-more" class="apps__label apps__label--less">Less</label>
-                <ul class="apps__list apps__list--main">
+                <ul class="apps__list">
                     <li class="apps__item">
                         <div class="service">
                             <a href="#" class="service__link">
