fix html and add scss file

--- a/submissions/iamsokol/popup/index.html
+++ b/submissions/iamsokol/popup/index.html
@@ -11,85 +11,117 @@
     <a class="header-text" href="#">Images</a>
     <input type="checkbox" id="popup" class="checkbox-popup">
     <input type="checkbox" id="more" class="checkbox-more">
-    <label class="block-square" for="popup">
-      <img class="image-square" src="img/square.svg" alt="popup">
-    </label>
+    <span class="arrow"></span>
     <div class="block-icons">
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/drive.svg" alt="drive">
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/drive.svg" alt="drive">
+        </a>
         <p class="block-icons-title">Drive</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/gmail.svg" alt="gmail">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/gmail.svg" alt="gmail">
+        </a>
         <p class="block-icons-title">Gmail</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/google.svg" alt="google">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/google.svg" alt="google">
+        </a>
         <p class="block-icons-title">Google</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/play.svg" alt="play">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/play.svg" alt="play">
+        </a>
         <p class="block-icons-title">Play</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/earth.svg" alt="earth">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/earth.svg" alt="earth">
+        </a>
         <p class="block-icons-title">Earth</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/search.svg" alt="search">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/search.svg" alt="search">
+        </a>
         <p class="block-icons-title">Search</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/youtube.svg" alt="youtube">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/youtube.svg" alt="youtube">
+        </a>
         <p class="block-icons-title">Youtube</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/translate.svg" alt="translate">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/translate.svg" alt="translate">
+        </a>
         <p class="block-icons-title">Translate</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/google-plus.svg" alt="google-plus">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/google-plus.svg" alt="google-plus">
+        </a>
         <p class="block-icons-title">Plus</p>
-      </a>
-      <a href="#" class="block-icons-item">
-        <img class="block-icons-img" src="img/account.svg" alt="account">
+      </div>
+      <div class="block-icons-item">
+        <a href="#">
+          <img class="block-icons-img" src="img/account.svg" alt="account">
+        </a>
         <p class="block-icons-title">Account</p>
-      </a>
+      </div>
       <span class="more-button">
         <label class="more" for="more">
           <p class="more-text">More</p>
         </label>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/calendar.svg" alt="calendar">
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/calendar.svg" alt="calendar">
+          </a>
           <p class="block-icons-title">Calendar</p>
-        </a>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/docs.svg" alt="docs">
+        </div>
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/docs.svg" alt="docs">
+          </a>
           <p class="block-icons-title">Docs</p>
-        </a>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/news.svg" alt="news">
+        </div>
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/news.svg" alt="news">
+          </a>
           <p class="block-icons-title">News</p>
-        </a>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/photos.svg" alt="photos">
+        </div>
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/photos.svg" alt="photos">
+          </a>
           <p class="block-icons-title">Photos</p>
-        </a>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/sheets.svg" alt="sheets">
+        </div>
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/sheets.svg" alt="sheets">
+          </a>
           <p class="block-icons-title">Sheets</p>
-        </a>
-        <a href="#" class="block-icons-item">
-          <img class="block-icons-img" src="img/slides.svg" alt="slides">
+        </div>
+        <div class="block-icons-item">
+          <a href="#">
+            <img class="block-icons-img" src="img/slides.svg" alt="slides">
+          </a>
           <p class="block-icons-title">Slides</p>
-        </a>
+        </div>
         <a href="#" class="more-link">Even more from Google</a>
       </span>
     </div>
-    <div class="block-bell">
+    <a href="#" class="block-bell">
       <img class="image-bell" src="img/bell.svg" alt="bell">
     </div>
-    <img class="image-user" src="img/photo.jpg" alt="user">
+    <a href="#">
+      <img class="image-user" src="img/photo.jpg" alt="user">
+    </a>
   </header>
 </body>
 </html>
