--- a/submissions/IrynaY/html-css-popup/index.html
+++ b/submissions/IrynaY/html-css-popup/index.html
@@ -9,13 +9,79 @@
 </head>
 <body>
   <header>
-      <div id="menu-container">
-          <a href="#">Gmail</a>
-          <a href="#">Images</a>
-          <a href="#" id="products">products</a>
-          <a href="#" id="notifications">notifications</a>
-          <a href="#" id="account">account</a>
-      </div>
+    <ul class="menu-right">
+      <li><a href="#">Gmail</a></li>
+      <li><a href="#">Images</a></li> 
+      <li class="products">
+        <input type="checkbox" class="hide">
+          <div class="popup">
+            <ul class="app-list">
+              <li>
+                <a href="#">
+                  <div class="app-list-img"></div>
+                  <span class="title">Docs</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <div class="app-list-img"></div>
+                  <span class="title">Translate</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <div class="app-list-img"></div>
+                  <span class="title">Google+</span>
+                </a>
+              </li>
+
+              <li>
+                <a href="#">
+                  <div class="app-list-img"></div>
+                  <span class="title">Searche</span>
+                </a>
+              </li>
+            </ul>
+            
+            <div class="more"><a href="#">More</a></div>
+            
+            <div class="all-list">
+              <ul class="app-list">
+                <li>
+                  <a href="#">
+                    <div class="app-list-img"></div>
+                    <span class="title">Docs</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <div class="app-list-img"></div>
+                    <span class="title">Translate</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <div class="app-list-img"></div>
+                    <span class="title">Google+</span>
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <div class="app-list-img"></div>
+                    <span class="title">Searche</span>
+                  </a>
+                </li>
+              </ul>
+          </div>
+      </li>
+      <li class="notifications"></li> 
+      <li class="account"></li> 
+    </ul>
   </header>
 </body>
 </html>
