--- a/submissions/iamsokol/popup/index.html
+++ b/submissions/iamsokol/popup/index.html
@@ -75,7 +75,7 @@
       </div>
       <span class="more-button">
         <label class="more" for="more">
-          <p class="more-text">More</p>
+          <button class="more-text" type="button" name="button">More</button>
         </label>
         <div class="block-icons-item">
           <a href="#">
