--- a/submissions/patrofimov/css-popup-menu/index.html
+++ b/submissions/patrofimov/css-popup-menu/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width,initial-scale=1">
-      <title>Popup-menu</title>
-      <link rel="stylesheet" type="text/css" href="style.css">
-   </head>
-   <body>
-      <ul class="main-menu">
-         <li class="main-menu-item"><a href="#">Gmail</a></li>
-         <li class="main-menu-item"><a href="#">Images</a></li>
-         <li class="main-menu-item folder">
-            <a class="main-item" href="#" tabindex="1" >Menu</a> 
-            <ul class="sub-menu">
-               <li class="sub-menu-item"><a href="#">Icon1</a></li>
-               <li class="sub-menu-item"><a href="#">Icon2</a></li>
-               <li class="sub-menu-item"><a href="#">Icon3</a></li>
-               <li class="sub-menu-item"><a href="#">Icon4</a></li>
-               <li class="sub-menu-item"><a href="#">Icon5</a></li>
-               <li class="sub-menu-item"><a href="#">Icon6</a></li>
-			   <li class="sub-menu-item"><a href="#">Icon7</a></li>
-			   <li class="sub-menu-item"><a href="#">Icon8</a></li>	
-			   <li class="sub-menu-item"><a href="#">Icon9</a></li>				   
-			   <li class="sub-menu-item"><a href="#">Icon10</a></li>
-               <input id='more-apps' class="more-apps" type="checkbox" name="more-apps" value="">
-               <label for="more-apps" class="sub-menu-item-ref">More
-               <span class="apps-close"></span>
-               </label>  
-               <ul class="sub-menu-more">
-                  <li class="sub-menu-more-item"><a href="#">Sub01</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub02</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub03</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub04</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub05</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub06</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub07</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub08</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub09</a></li>
-                  <li class="sub-menu-more-item"><a href="#">Sub10</a></li>
-                  <a class="other-products" href="#">Even more from Google</a>
-               </ul>
-            </ul>
-         </li>
-         <li class="main-menu-item"><a href="#">Home</a></li>
-         <li class="main-menu-item"><a href="#">Login</a></li>
-      </ul>
-   </body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Popup-menu</title>
+    <link rel="stylesheet" type="text/css" href="style.css" />
+  </head>
+  <body>
+    <ul class="main-menu">
+      <li class="main-menu-item"><a class="ref-item" href="#">Gmail</a></li>
+      <li class="main-menu-item"><a class="ref-item" href="#">Images</a></li>
+      <li class="main-menu-item folder">
+        <a class="main-item ref-item" href="#" tabindex="1">Menu</a>
+        <ul class="sub-menu">
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon1</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon2</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon3</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon4</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon5</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon6</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon7</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon8</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon9</a></li>
+          <li class="sub-menu-item"><a class="ref-item" href="#">Icon10</a></li>
+          <input
+            id="more-apps"
+            class="more-apps"
+            type="checkbox"
+            name="more-apps"
+            value=""
+          />
+          <label for="more-apps" class="sub-menu-item-ref"
+            >More
+            <span class="apps-close"></span>
+          </label>
+          <ul class="sub-menu-more">
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub01</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub02</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub03</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub04</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub05</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub06</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub07</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub08</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub09</a></li>
+            <li class="sub-menu-more-item"><a class="ref-item" href="#">Sub10</a></li>
+            <a class="other-products ref-item" href="#">Even more from Google</a>
+          </ul>
+        </ul>
+      </li>
+      <li class="main-menu-item"><a class="ref-item" href="#">Home</a></li>
+      <li class="main-menu-item"><a class="ref-item" href="#">Login</a></li>
+    </ul>
+  </body>
 </html>
